force-app/main/default/objects/Deal_Revenue__c/Deal_Revenue__c.object-meta.xml
<CustomObject>
    <label>Deal Revenue</label>
    <pluralLabel>Deal Revenues</pluralLabel>
    <nameField>
        <displayFormat>DRV-{00000000}</displayFormat>
        <label>Deal Revenue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>