force-app/main/default/objects/Deal_Revenue__c/fields/Accounting_Period__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Period__c</fullName>
    <label>Accounting Period</label>
    <length>20</length>
    <type>Text</type>
</CustomField>