force-app/main/default/objects/Deal_Revenue__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <label>Customer Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Deal Revenues</relationshipLabel>
    <relationshipName>Customer_Deal_Revenues</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>