force-app/main/default/objects/Deal_Revenue__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <description
  >Nullable, not required - an imported revenue event that couldn't be automatically matched to a deal is inserted with no Deal__c and routed to Revenue_Reconciliation__c instead of guessing (doc Sprint 41 §41.15).</description>
    <label>Deal</label>
    <type>Lookup</type>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>Deal Revenues</relationshipLabel>
    <relationshipName>Deal_Revenues</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>