force-app/main/default/objects/Deal_Revenue__c/fields/Deal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Deal_Opportunity__c</fullName>
    <label>Deal Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Deal_Opportunity__c</referenceTo>
    <relationshipLabel>Deal Revenues</relationshipLabel>
    <relationshipName>Deal_Revenues3</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>