force-app/main/default/objects/Deal_Revenue__c/fields/External_Revenue_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Revenue_Key__c</fullName>
    <description
  >Idempotency key for imported revenue (doc Sprint 41 section 41.10) - e.g. 'ERP|INVOICE|INV-98273'. A duplicate import resolves to the existing row instead of creating a second one.</description>
    <label>External Revenue Key</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>