force-app/main/default/objects/Deal_Revenue__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <label>Implementation</label>
    <type>Lookup</type>
    <referenceTo>Deal_Implementation__c</referenceTo>
    <relationshipLabel>Deal Revenues</relationshipLabel>
    <relationshipName>Deal_Revenues4</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>