force-app/main/default/objects/Deal_Revenue__c/fields/Imported_On__c.field-meta.xml
<CustomField>
    <fullName>Imported_On__c</fullName>
    <label>Imported On</label>
    <type>DateTime</type>
</CustomField>