force-app/main/default/objects/Deal_Revenue__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Deal Revenues</relationshipLabel>
    <relationshipName>Deal_Revenues2</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>