force-app/main/default/objects/Deal_Revenue__c/fields/Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Amount__c</fullName>
    <description
  >Amount in the source transaction's own currency, before any reporting-currency conversion. Known Adaptation #1 - no live FX conversion service, org isn't multi-currency enabled.</description>
    <label>Original Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>