force-app/main/default/objects/Deal_Revenue__c/fields/Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Date__c</fullName>
    <label>Revenue Date</label>
    <type>Date</type>
</CustomField>