force-app/main/default/objects/Deal_Revenue__c/fields/Reversal_Of__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Of__c</fullName>
    <description
  >The revenue record this row reverses. Reversals are compensating records - the original is never mutated.</description>
    <label>Reversal Of</label>
    <type>Lookup</type>
    <referenceTo>Deal_Revenue__c</referenceTo>
    <relationshipLabel>Reversals</relationshipLabel>
    <relationshipName>Reversals</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>