force-app/main/default/objects/Deal_Revenue__c/fields/Source_Effective_On__c.field-meta.xml
<CustomField>
    <fullName>Source_Effective_On__c</fullName>
    <label>Source Effective On</label>
    <type>DateTime</type>
</CustomField>