force-app/main/default/objects/Deal_Revenue__c/fields/Source_Hash__c.field-meta.xml
<CustomField>
    <fullName>Source_Hash__c</fullName>
    <label>Source Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>