force-app/main/default/objects/Deal_Revenue__c/fields/Source_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Source_Revenue__c</fullName>
    <description
  >The original revenue record this adjustment/correction relates to, if any.</description>
    <label>Source Revenue</label>
    <type>Lookup</type>
    <referenceTo>Deal_Revenue__c</referenceTo>
    <relationshipLabel>Corrections</relationshipLabel>
    <relationshipName>Corrections</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>