force-app/main/default/objects/Deal_Revenue__c/fields/Source_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Transaction_Id__c</fullName>
    <label>Source Transaction Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>