force-app/main/default/objects/Deal_Revenue__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <description
  >Schema-only (Known Adaptation #11) - no tax calculation logic. Populated only if the source system supplies it.</description>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>