force-app/main/default/objects/Deal_Revenue__c/fields/Tax_Inclusive__c.field-meta.xml
<CustomField>
    <fullName>Tax_Inclusive__c</fullName>
    <label>Tax Inclusive</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>