force-app/main/default/objects/Deal_Revenue__c/fields/Unit_Value__c.field-meta.xml
<CustomField>
    <fullName>Unit_Value__c</fullName>
    <label>Unit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>